<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Lab6CurrencyActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab6_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/txtNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/textbox_hint"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spnUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/currency_units_array"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow style="@style/CurrencyTableRow">
                <ImageView style="@style/CurrencyFlag" android:src="@drawable/usd" android:contentDescription="@string/usd_name" />
                <TextView style="@style/UnitTextView" android:text="@string/usd_unit" />
                <TextView android:id="@+id/Lblusd" style="@style/ResultTextView" />
            </TableRow>
            <TableRow style="@style/CurrencyTableRow">
                <ImageView style="@style/CurrencyFlag" android:src="@drawable/eur" android:contentDescription="@string/eur_name" />
                <TextView style="@style/UnitTextView" android:text="@string/eur_unit" />
                <TextView android:id="@+id/lblEur" style="@style/ResultTextView" />
            </TableRow>
            <TableRow style="@style/CurrencyTableRow">
                <ImageView style="@style/CurrencyFlag" android:src="@drawable/gbp" android:contentDescription="@string/gbp_name" />
                <TextView style="@style/UnitTextView" android:text="@string/gbp_unit" />
                <TextView android:id="@+id/lblGbp" style="@style/ResultTextView" />
            </TableRow>
            <TableRow style="@style/CurrencyTableRow">
                <ImageView style="@style/CurrencyFlag" android:src="@drawable/inr" android:contentDescription="@string/inr_name" />
                <TextView style="@style/UnitTextView" android:text="@string/inr_unit" />
                <TextView android:id="@+id/lblInr" style="@style/ResultTextView" />
            </TableRow>
            <TableRow style="@style/CurrencyTableRow">
                <ImageView style="@style/CurrencyFlag" android:src="@drawable/aud" android:contentDescription="@string/aud_name" />
                <TextView style="@style/UnitTextView" android:text="@string/aud_unit" />
                <TextView android:id="@+id/lblAud" style="@style/ResultTextView" />
            </TableRow>
            <TableRow style="@style/CurrencyTableRow">
                <ImageView style="@style/CurrencyFlag" android:src="@drawable/cad" android:contentDescription="@string/cad_name" />
                <TextView style="@style/UnitTextView" android:text="@string/cad_unit" />
                <TextView android:id="@+id/lblCad" style="@style/ResultTextView" />
            </TableRow>
            <TableRow style="@style/CurrencyTableRow">
                <ImageView style="@style/CurrencyFlag" android:src="@drawable/zar" android:contentDescription="@string/zar_name" />
                <TextView style="@style/UnitTextView" android:text="@string/zar_unit" />
                <TextView android:id="@+id/lblZar" style="@style/ResultTextView" />
            </TableRow>
            <TableRow style="@style/CurrencyTableRow">
                <ImageView style="@style/CurrencyFlag" android:src="@drawable/nzd" android:contentDescription="@string/nzd_name" />
                <TextView style="@style/UnitTextView" android:text="@string/nzd_unit" />
                <TextView android:id="@+id/lblNzd" style="@style/ResultTextView" />
            </TableRow>
            <TableRow style="@style/CurrencyTableRow">
                <ImageView style="@style/CurrencyFlag" android:src="@drawable/jpy" android:contentDescription="@string/jpy_name" />
                <TextView style="@style/UnitTextView" android:text="@string/jpy_unit" />
                <TextView android:id="@+id/lblJpy" style="@style/ResultTextView" />
            </TableRow>
            <TableRow style="@style/CurrencyTableRow">
                <ImageView style="@style/CurrencyFlag" android:src="@drawable/vnd" android:contentDescription="@string/vnd_name" />
                <TextView style="@style/UnitTextView" android:text="@string/vnd_unit" />
                <TextView android:id="@+id/lblVnd" style="@style/ResultTextView" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>